Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -670,7 +670,7 @@ On the afternoon of September 19, 2021, Human rights defenders **Huang Xueqin** 
 
 The weekly gatherings with friends that XueBing organized and participated in were characterized by the police as a threat to national security. Over the past year, the police have continually fabricated evidence based on these false accusations, coerced Huang into replacing her lawyer, interrogated and harassed dozens of civil activists. This further clamped down on China’s already weakened civil society.
 
-As of today, Huang Xueqin, the #MeToo activist and independent journalist, and Wang Jianbing, the labor rights advocate, have been arbitrarily detained for over a year. They were formally arrested on October 27, 2021, and transferred to the Procuratorate Office on March 27, 2022. After being returned for supplementary investigation twice, the case was finally submitted to the Guangzhou Intermediate People's Court for its first instance at the end of August 2022. The two are now being detained in the Guangzhou No. 3 Detention Center *(Previously, XueBing were detailed at Guangzhou No.1 Detention Center, but since the beginning of July 2022, the Guangzhou No. 1 Detention Center was merged into the No. 3 Detention Center)* 
+As of today, Huang Xueqin, the #MeToo activist and independent journalist, and Wang Jianbing, the labor rights advocate, have been arbitrarily detained for over a year. They were formally arrested on October 27, 2021, and transferred to the Procuratorate Office on March 27, 2022. After being returned for supplementary investigation twice, the case was finally submitted to the Guangzhou Intermediate People's Court for its first instance at the mid-August 2022. The two are now being detained in the Guangzhou No. 3 Detention Center *(Previously, XueBing were detailed at Guangzhou No.1 Detention Center, but since the beginning of July 2022, the Guangzhou No. 1 Detention Center was merged into the No. 3 Detention Center)* 
 
 ## **1. The One-Year Anniversary Review of the "XueBing" Case**
 
