--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -665,7 +665,7 @@ F﻿or English version, please click on [here](../365-en)
 
 2021年9月19日下午，广州警方以涉嫌“煽动颠覆国家政权罪”强行抓捕了黄雪琴和王建兵（以下简称两人为“雪饼”），并以“防疫”为由对两人采取了长达五个多月的单独关押和秘密审讯，情形等同于“指定居所监视居住（RSDL)”——一种严重违反国际人权原则的羁押举措。两人参与和组织的每周日常朋友聚会被警方定性为威胁国家安全的行为。过去一年间警方以此持续罗织、编造罪证，逼迫黄雪琴撤换律师，审讯和骚扰数十公民社会行动者，借此进一步打压已经疲软的中国公民社会。
 
-时至今日，#MeToo行动者兼独立记者黄雪琴和劳工权益倡导者王建兵已经被任意羁押长达一年。两人于2021年10月27日被正式批准逮捕，2022年3月27日被正式移送检察院，历经两次退回补充侦查后，于2022年8月首次移送广州市中级人民法院。雪饼两人现在被羁押于广州市第三看守所(据了解，2022年7月初，广州市第一看守所整体并入到第三看守所，因此雪饼二人的羁押所在地亦更改为广州市第三看守所)。
+时至今日，#MeToo行动者兼独立记者黄雪琴和劳工权益倡导者王建兵已经被任意羁押长达一年。两人于2021年10月27日被正式批准逮捕，2022年3月27日被正式移送检察院，历经两次退回补充侦查后，于2022年8月中首次移送广州市中级人民法院。雪饼两人现在被羁押于广州市第三看守所(据了解，2022年7月初，广州市第一看守所整体并入到第三看守所，因此雪饼二人的羁押所在地亦更改为广州市第三看守所)。
 
 ## **1.** 回顾消失的一年：两人被任意羁押，雪琴被迫撤换律师，公民社会伙伴遭遇警方骚扰/审讯/逼迁
 
