Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -732,9 +732,7 @@ Email backup: [freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)
 
 **B) Photo Support:** Please take a picture with photos of Huang Xueqin or Wang Jianbing in your city, and send the solidarity picture to email ([freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)) as part of our social media campaign. If you have security concerns, please blur your face with an image editing app before sending or write to us for assistance.
 
-![](https://i.imgur.com/8LZmCcN.png)
-
-![](https://i.imgur.com/ewdQ6O1.png)
+Xuebing pictures can be taken using the two pictures at the bottom of this page or using [their life photos](https://free-xueq-jianb.github.io/self/#%E9%9B%AA%E9%A5%BC%E7%94%9F%E6%B4%BB%E7%85%A7)
 
 **C) Spread the Words:** Please stay tuned for updates on XueBing’s case via our website, and social media platform. Please widely repost our content on your social media (especially on Mainland’s social platform), which will allow XueBing’s story to reach more people.
 
@@ -767,3 +765,7 @@ g. In May 2022, Huang Xueqin was nominated by Index on Censorship, an NGO that h
 h. In June 2022, Huang Xueqin was awarded [Wallis Annenberg Justice for Women Journalists Award](https://www.iwmf.org/community/xueqin-sophia-huang/) by the International Women's Media Fund (IWMF), which honors women journalists who show remarkable persistence and bravery. The award praised Huang's career reporting on injustice & corruption in China – including pioneering the #MeToo movement.
 
 <!--EndFragment-->
+
+![](https://i.imgur.com/8LZmCcN.png)
+
+![](https://i.imgur.com/ewdQ6O1.png)
