--- a/source/_posts/500.md
+++ b/source/_posts/500.md
@@ -2,7 +2,7 @@
 layout: post
 title: 雪饼失联/被捕已经500天
 date: 2023-02-01T05:18:11.771Z
-cover: https://i.imgur.com/jmSTJIs.png
+cover: https://i.imgur.com/6cdCaIz.png
 categories:
   - 案件通报
 ---
