--- a/source/_posts/【案件更新】黄雪琴关押情况特别通报.md
+++ b/source/_posts/【案件更新】黄雪琴关押情况特别通报.md
@@ -21,20 +21,17 @@ categories:
 
 
 
-3）黄雪琴经常被半夜突发提讯，被人为强行扰乱作息。从不同渠道了解，我们确证，黄雪琴在关押期间b长期强行被半夜叫醒带去提讯，强行要求她不断重复、写下既往的所有人生经历。我们认为，警方故意、半夜强行扰乱雪琴正常休息的行为，无非就是想通过这样的方式对雪琴进行精神施压和肉体酷刑，试图令她在疲劳审讯和精神折磨之下屈服认罪。这样的行为是极具恶意和报复性的。我们有理由怀疑上述提到的一系列雪琴身体病状，与这些恶意提审和剥夺睡眠等酷刑行为极为关联。
+3）黄雪琴经常被半夜突发提讯，被人为强行扰乱作息。从不同渠道了解，我们确证，黄雪琴在关押期间长期强行被半夜叫醒带去提讯，强行要求她不断重复、写下既往的所有人生经历。我们认为，警方故意、半夜强行扰乱雪琴正常休息的行为，无非就是想通过这样的方式对雪琴进行精神施压和肉体酷刑，试图令她在疲劳审讯和精神折磨之下屈服认罪。这样的行为是极具恶意和报复性的。我们有理由怀疑上述提到的一系列雪琴身体病状，与这些恶意提审和剥夺睡眠等酷刑行为极为关联。
 
 
 
-这些情况仅仅是我们能够了解到的关于黄雪琴关押处境的“冰山一角”。由于无法详细了解雪琴现在官方律师委派情况，我们难以获得她的身心健康状况和案件进展信息。可仅仅是上述所提到的情况，已经足够令人深感悲愤和担忧。“雪饼案”历经了五个多月单独关押（“指定居所监视居住”）、多次转移看守所、屡次退回侦查、被撤销/施压解聘律师，迄今已经被任意羁押超过500多天。本案迟迟未开庭，我们认为主要是由于官方仍然在用尽各种方式迫使雪饼两人认罪。作为雪琴和煎饼的伙伴，我们严厉谴责广州当局这种严重违法和不人道的做法，严正要求广州当局立即
+这些情况仅仅是我们能够了解到的关于黄雪琴关押处境的“冰山一角”。由于无法详细了解雪琴现在官方律师委派情况，我们难以获得她的身心健康状况和案件进展信息。可仅仅是上述所提到的情况，已经足够令人深感悲愤和担忧。“雪饼案”历经了五个多月单独关押（“指定居所监视居住”）、多次转移看守所、屡次退回侦查、被撤销/施压解聘律师，迄今已经被任意羁押超过500多天。本案迟迟未开庭，我们认为主要是由于官方仍然在用尽各种方式迫使雪饼两人认罪。作为雪琴和煎饼的伙伴，我们严厉谴责广州当局这种严重违法和不人道的做法，严正要求广州当局立即：
 
+1. 对黄雪琴和王建兵两人进行全面、系统的身体健康体检；对他们两人出现的各种身体、心理问题提供必要的医疗支持。
+2. 保障黄雪琴和王建兵的律师权益和自由通讯的权利；重新恢复外界汇款生活费和允许雪饼自由使用。
+3. 无罪释放黄雪琴和王建兵。“雪饼案”拖延500多天未开庭，这一无中生有的政治冤案，违背程序正义和宪法保障，当局必须立即释放两人。 
 
-
-a）对黄雪琴和王建兵两人进行全面、系统的身体健康体检；对他们两人出现的各种身体、心理问题提供必要的医疗支持。
-
-b）保障黄雪琴和王建兵的律师权益和自由通讯的权利；重新恢复外界汇款生活费和允许雪饼自由使用。
-
-c）无罪释放黄雪琴和王建兵。“雪饼案”拖延500多天未开庭，这一无中生有的政治冤案，违背程序正义和宪法保障，当局必须立即释放两人。 
-
+### 附：传播图
 
 通报长图，供下载传播：
 
