Update Post “【案件更新】黄雪琴关押情况特别通报”

--- a/source/_posts/【案件更新】黄雪琴关押情况特别通报.md
+++ b/source/_posts/【案件更新】黄雪琴关押情况特别通报.md
@@ -2,6 +2,7 @@
 layout: post
 title: 【案件更新】黄雪琴关押情况特别通报
 date: 2023-02-15T01:12:06.556Z
+cover: https://i.imgur.com/uecqgNg.jpg
 categories:
   - 案件通报
 ---
@@ -13,15 +14,15 @@ categories:
 
 
 
-1）黄雪琴自关押后，停来月经超过五个月，亦无法得知其后续身体情况。从不同渠道了解，我们确证，黄雪琴在最初的关押期间，身体出现了长时间的内分泌失调，闭经超过五个月，这已经构成了医学上的病理性“继发性闭经”。这种情况通常是由于精神应激（突然或长期精神压抑、紧张、忧郁、环境改变、过度劳累等）、体重急剧下降等原因所引起的。这也意味着，关押中的雪琴可能还伴有着严重的精神状态问题。我们感到非常愤怒和担心。但是，官方从未公开信息，迄今为止我们仍然无法得知雪琴的健康问题是否得到恰当的治疗，也无法确认雪琴长时间停来月经的身心病理症状是否还在加重。
+1）**黄雪琴自关押后，停来月经超过五个月，亦无法得知其后续身体情况**。从不同渠道了解，我们确证，黄雪琴在最初的关押期间，身体出现了长时间的内分泌失调，闭经超过五个月，这已经构成了医学上的病理性“继发性闭经”。这种情况通常是由于精神应激（突然或长期精神压抑、紧张、忧郁、环境改变、过度劳累等）、体重急剧下降等原因所引起的。这也意味着，关押中的雪琴可能还伴有着严重的精神状态问题。我们感到非常愤怒和担心。但是，官方从未公开信息，迄今为止我们仍然无法得知雪琴的健康问题是否得到恰当的治疗，也无法确认雪琴长时间停来月经的身心病理症状是否还在加重。
 
 
 
-2）黄雪琴关押前半年体重骤减，近一年来缺钙明显、血压血糖低、身体腰间刺痛。我们早前获知，黄雪琴在被关押的前半年，体重骤减5kg（11lb）；其本人被捕前已经很瘦，体重原本不及50kg，这体重骤减幅度之大令人担心。此外，过去一年多的时间里，雪琴出现了严重缺钙、低血糖、低血压和身体腰间疼痛等全身性病症。其中缺钙情况，很明显是由于长期闭经导致的骨质疏松提前（一般是女性只有在绝经后才会出现的症状）；而腰间刺痛，怀疑是由于长期提审、“老虎凳”强行坐立过久等导致，使得腰椎间盘严重突出才会导致腰间强烈的刺痛感；低血糖低血压等症状，明显与关押期间长期的精神高压（甚至是酷刑）、饮食营养不良、休息不足等因素导致的病理性症状。这些叠加的身体病理信号，无不提示雪琴在过去500多天里遭到了非人对待。亟需重要关注的是，这些病症若得不到及时、合适的治疗，将有可能会对身体逐渐造成永久性的损害。
+2）**黄雪琴关押前半年体重骤减，近一年来缺钙明显、血压血糖低、身体腰间刺痛**。我们早前获知，黄雪琴在被关押的前半年，体重骤减5kg（11lb）；其本人被捕前已经很瘦，体重原本不及50kg，这体重骤减幅度之大令人担心。此外，过去一年多的时间里，雪琴出现了严重缺钙、低血糖、低血压和身体腰间疼痛等全身性病症。其中缺钙情况，很明显是由于长期闭经导致的骨质疏松提前（一般是女性只有在绝经后才会出现的症状）；而腰间刺痛，怀疑是由于长期提审、“老虎凳”强行坐立过久等导致，使得腰椎间盘严重突出才会导致腰间强烈的刺痛感；低血糖低血压等症状，明显与关押期间长期的精神高压（甚至是酷刑）、饮食营养不良、休息不足等因素导致的病理性症状。这些叠加的身体病理信号，无不提示雪琴在过去500多天里遭到了非人对待。亟需重要关注的是，这些病症若得不到及时、合适的治疗，将有可能会对身体逐渐造成永久性的损害。
 
 
 
-3）黄雪琴经常被半夜突发提讯，被人为强行扰乱作息。从不同渠道了解，我们确证，黄雪琴在关押期间长期强行被半夜叫醒带去提讯，强行要求她不断重复、写下既往的所有人生经历。我们认为，警方故意、半夜强行扰乱雪琴正常休息的行为，无非就是想通过这样的方式对雪琴进行精神施压和肉体酷刑，试图令她在疲劳审讯和精神折磨之下屈服认罪。这样的行为是极具恶意和报复性的。我们有理由怀疑上述提到的一系列雪琴身体病状，与这些恶意提审和剥夺睡眠等酷刑行为极为关联。
+3）**黄雪琴经常被半夜突发提讯，被人为强行扰乱作息**。从不同渠道了解，我们确证，黄雪琴在关押期间长期强行被半夜叫醒带去提讯，强行要求她不断重复、写下既往的所有人生经历。我们认为，警方故意、半夜强行扰乱雪琴正常休息的行为，无非就是想通过这样的方式对雪琴进行精神施压和肉体酷刑，试图令她在疲劳审讯和精神折磨之下屈服认罪。这样的行为是极具恶意和报复性的。我们有理由怀疑上述提到的一系列雪琴身体病状，与这些恶意提审和剥夺睡眠等酷刑行为极为关联。
 
 
 
