Update Post “0214_en”

--- a/source/_posts/0214_en.md
+++ b/source/_posts/0214_en.md
@@ -7,10 +7,9 @@ categories:
 tags:
   - English
 ---
-中文版：[https://free-xueq-jianb.github.io/2023/02/15/%E3%80%90%E6%A1%88%E4%BB%B6%E6%9B%B4%E6%96%B0%E3%80%91%E9%BB%84%E9%9B%AA%E7%90%B4%E5%85%B3%E6%8A%BC%E6%83%85%E5%86%B5%E7%89%B9%E5%88%AB%E9%80%9A%E6%8A%A5/](https://free-xueq-jianb.github.io/2023/02/15/%E3%80%90%E6%A1%88%E4%BB%B6%E6%9B%B4%E6%96%B0%E3%80%91%E9%BB%84%E9%9B%AA%E7%90%B4%E5%85%B3%E6%8A%BC%E6%83%85%E5%86%B5%E7%89%B9%E5%88%AB%E9%80%9A%E6%8A%A5/)
-
 It has been over 500 days (17 months) since independent journalist and #MeToo activist Huang Xueqin (“Sohpia”)  and Wang Jianbing were arbitrarily detained by Guangzhou Police under the charge of “inciting subversion of state power.” Huang’s friends and families still have no way of knowing about her conditions since she was detained incommunicado. Her self-appointed lawyer was forced to withdraw from the case and replaced by government-appointed lawyer(s), who has not communicated with Huang’s family and friends. During this period of time, we have collected information from multiple sources that confirm Huang’s condition, which are extremely worrisome. We hereby call for continued international as well as domestic attention and support to this case.
 
+中文版通告见：[“【案件更新】黄雪琴关押情况特别通报”](https://free-xueq-jianb.github.io/2023/02/15/%E3%80%90%E6%A1%88%E4%BB%B6%E6%9B%B4%E6%96%B0%E3%80%91%E9%BB%84%E9%9B%AA%E7%90%B4%E5%85%B3%E6%8A%BC%E6%83%85%E5%86%B5%E7%89%B9%E5%88%AB%E9%80%9A%E6%8A%A5/)
 
 
 We have learned:
