Update Post “caseup230917”

--- a/source/_posts/caseup230917.md
+++ b/source/_posts/caseup230917.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: caseup230917
+title: 【Case Update】The XueBing case is scheduled for a pre-trial court
+  appearance on September 19th at the Guangzhou Intermediate People's Court.
 date: 2023-09-17T05:53:36.995Z
 ---
 The court recently notified that the XueBing case (feminist activist HuangXueqin & labor activist WangJianbing) will have pre-trial court appearance at 9:30 am on Tuesday, Sept. 19, at Guangzhou Intermediate People's Court. Both Huang’s and Wang’s lawyers will be in attendance. The date for an official trial is not yet announced but may follow the pre-trial meeting CLOSELY.
