--- a/source/_posts/0922.md
+++ b/source/_posts/0922.md
@@ -1,6 +1,15 @@
 ---
 layout: post
-title: "0922"
+title: 0922雪饼开庭相关消息
 date: 2023-09-22T01:53:19.035Z
+cover: https://i.imgur.com/52O78SO.png
 ---
-t﻿est
+今天（9月22日）早上9点半，雪饼案在广州市中级法院正式开庭，法院门口周边连夜封路，不允许任何人聚集和围观。
+
+
+
+![](https://i.imgur.com/52O78SO.png)
+
+![](https://i.imgur.com/Usqbz4V.png)
+
+![](https://i.imgur.com/VPHY4OO.png)
