--- a/source/_posts/0922.md
+++ b/source/_posts/0922.md
@@ -5,6 +5,8 @@ date: 2023-09-22T01:53:19.035Z
 cover: https://i.imgur.com/52O78SO.png
 categories:
   - 案件通报
+tags:
+  - 开庭
 ---
 今天（9月22日）早上9点半，雪饼案在广州市中级法院正式开庭，法院门口周边连夜封路，不允许任何人聚集和围观。
 
